[package]
name = "browser-orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
anyhow = "1.0.100"
axum = "0.8.8"
reqwest = { version = "0.13.1", features = ["json"] }
restate-sdk = { version="0.7.0", features = ["schemars"] }
schemars = "1.2.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
